test/vm/fails/invalid_less_than.js

const res = (0 < "1234");
